--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -2,10 +2,11 @@ name: demo
 run-name: ${{github.actor}} is testing out Github Actions
 on: push
 jobs:
-    Explore-Github-Actions:
+    explore-github-actions:
         runs-on: Ubuntu-latest
         steps:
-            - run: echo "demo is running on ${{runner.os}}, the repository is ${{github.repository}}, the branch is ${{github.ref}}, is trigger by ${{github.event}} event"
+            - name: welcome
+              run: echo "demo is running on ${{runner.os}}, the repository is ${{github.repository}}, the branch is ${{github.ref}}, is trigger by ${{github.event_name}} event"
             - name: checkout
               uses: actions/checkout@v4
             - name: list files
