--- a/.github/workflows/doc-lint.yml
+++ b/.github/workflows/doc-lint.yml
@@ -11,4 +11,4 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
             - name: Checking misspell
-              uses: reviewdog/action-misspell@1.21.0
+              uses: reviewdog/action-misspell@v1.26.3
