--- a/.github/workflows/doc-lint.yml
+++ b/.github/workflows/doc-lint.yml
@@ -1,14 +1,14 @@
 name: doc lint
 on:
-    push:
-        branches: [main]
-        paths:
-            - '*.md'
+  pull_request:
+    branches: [main]
+    paths:
+      - '*.md'
 jobs:
-    mis-spell:
-        runs-on: Ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
-            - name: Checking misspell
-              uses: reviewdog/action-misspell@v1.26.3
+  mis-spell:
+    runs-on: Ubuntu-latest
+    steps:
+        - name: Checkout
+          uses: actions/checkout@v3
+        - name: Checking misspell
+          uses: reviewdog/action-misspell@v1.26.3
