--- a/.github/workflows/doc-lint.yml
+++ b/.github/workflows/doc-lint.yml
@@ -12,3 +12,5 @@ jobs:
           uses: actions/checkout@v3
         - name: Checking misspell
           uses: reviewdog/action-misspell@v1.26.3
+          with:
+            locale: "US"
